hphp/hack/test/typecheck/enum_class_label/memoized_bad_arity1.php
<?hh

<<__Memoize(#KeyedByIC, 123)>>
function foo(): void {}
